[metadata]
download_url = https://pypi.org/project/embci/
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Framework :: Bottle
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Medical Science Apps.


[options]
tests_require = pytest;
setup_requires = pytest-runner;
python_requires = >=2.6, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4
use_2to3 = True

[options.extras_require]
reST = docutils>=0.3; m2r

# Set data_files in setup.py
# [options.data_files]
# /etc/init.d = files/service/embci
# /etc/embci = files/service/*

[bdist_wheel]
# generate wheel file support both python2 & 3.
universal = 1

[aliases]
test = pytest
